[gd_scene load_steps=4 format=3 uid="uid://bcjka587mnujy"]

[ext_resource type="Script" path="res://stat.gd" id="1_6nhbg"]
[ext_resource type="Texture2D" uid="uid://b58r67e7hjw2n" path="res://icon.svg" id="1_msux6"]

[sub_resource type="LabelSettings" id="LabelSettings_6tu8i"]
font_size = 32
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="Stat" type="PanelContainer"]
clip_contents = true
custom_minimum_size = Vector2(75, 200)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 200.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "This is a stat!"
script = ExtResource("1_6nhbg")
icon = ExtResource("1_msux6")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.643137, 0.662745, 0.666667, 1)

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="StatIcon" type="TextureRect" parent="HSeparator"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 24.0
offset_right = 40.0
offset_bottom = 104.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_msux6")
expand_mode = 3

[node name="StatName" type="Label" parent="HSeparator/StatIcon"]
custom_minimum_size = Vector2(50, 20)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = -24.0
offset_right = 26.0
offset_bottom = -1.0
grow_horizontal = 2
text = "Stat"
horizontal_alignment = 1

[node name="StatNum" type="Label" parent="HSeparator"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = 128.0
offset_right = 24.0
offset_bottom = 173.0
text = "30"
label_settings = SubResource("LabelSettings_6tu8i")
horizontal_alignment = 1
